# demoblaze-tests

./: .env.example  .gitignore  README.md  config.local.env.example  config.py  config.remote.env.example  pyproject.toml  settings.py
demoblaze_tests/: app.py  utils.py
demoblaze_tests/data/: products.py  users.py
demoblaze_tests/data/files/: products.csv
demoblaze_tests/model/: client.py
demoblaze_tests/model/components/: account.py  cart.py  menu.py  modal_content.py  products.py
demoblaze_tests/model/pages/: cart_page.py  home_page.py  product_card_page.py
tests/: conftest.py  test_account.py  test_cart.py  test_products.py
